--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ nav a{
 .content{
 	margin: auto;
 	padding: 30px;
-	width: 70%;
+	width: 80%;
 	min-height: 400px;
 }
 
@@ -167,10 +167,10 @@ p, table{
 
 /* ========== Стили подсказок ========== */
 .podskazki{
-	width: 250px;
+	width: 350px;
 	position: fixed;
 	right: 10px;
-	top: 30%; 
+	top: 24%; 
     padding: 5px;
 	background-color: #2B70CA;
 	color: white;
@@ -192,15 +192,23 @@ p, table{
 	padding-top: 0px;
 	color: white;
 }
-.podskazki a:hover{
+.podskazki  a:hover{
 	background-color: white;
 	color: #2B70CA;
 }
+#podskazki_text a:hover{
+	background-color: #538ED0;
+	color: white;
+}
+
 #podskazki_text{
+	overflow: auto;
+	max-height: 400px;
 	margin-top: 5px;
 	padding: 5px;
 	background-color: white;
 	color: black;
+	font-size: 12px;
 }
 
 /* ========== Стили вкладок ========== */
